# elevenlabs-mcp-docker

./: .Dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
11labs_mcp/: __init__.py  server.py
elevenlabs_mcp/: __init__.py  __main__.py  model.py  server.py  utils.py
tests/: test_utils.py
